css/desktop.css
/* Sticky footer styles
-------------------------------------------------- */

html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  /* Negative indent footer by its height */
  margin: 0 auto -60px;
  /* Pad bottom by footer height */
  padding: 100px 0 60px;
}

/* Set the fixed height of the footer here */
#footer {
  height: 60px;
  background-color: #f5f5f5;
}


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

.container .credit {
  margin: 20px 0;
}

#footer > .container {
  padding-left: 15px;
  padding-right: 15px;
}
code {
  font-size: 80%;
}
@font-face {
  font-family: 'GoodTimes';
  src: url('fonts/good_times/ot/good_times_rg.otf') format("opentype"),
       url('fonts/good_times/tt/good_times_rg.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}
.bridgeit-font{
    font-family: GoodTimes;
}
body, h1, h2, h3, h4{
    font-family: 'Open Sans', sans-serif;
}
h2, .h2 {
    font-size: 24px;
    font-weight: 300;
}
h3, .h3{
    font-size: 18px;
    font-weight: bold;
    padding: 0;
}
a {
    color: #DD5734;
}
a:hover{
    text-decoration: none;
}
a:focus{
    outline: none;
}
.navbar{
    min-height: 100px;
}
@media (min-width: 768px) {
    .navbar-nav > li > a {
        padding-top: 40px;
        padding-bottom: 40px;
    }
}
.navbar-default {
    background-color: #FFF;
}
.navbar-brand {
    background-image: url(../images/bridgeIt-logo.png);
    background-repeat: no-repeat;
    display: inline-block;
    width: 315px;
    height: 100px;
    background-size: 93%;
    background-position: 0 9px;
}
.navbar a i{
    margin-right: 5px;
    display: inline-block;
    position: absolute;
    margin-left: -20px;
    margin-top: 5px;
}
@media (max-width: 768px) {
    #wrap {
        min-height: 100%;
        height: auto !important;
        height: 100%;
        margin: 0 auto -60px;
        padding: 60px 0 60px;
    }
    .navbar{
        min-height: 60px;
        height: 60px;
        margin-bottom: 0;
    }
    .navbar-default .navbar-brand {
        width: 250px;
        height: 60px;
        background-size: 81%;
        background-position: 15px 2px;
    }
    .navbar-default .navbar-toggle{
        font-size: 22px;
        border-color: #DD5734;
        color: #DD5734;
        padding: 2px 8px;
        margin-top: 10px;
        margin-bottom: 0;
    }
    .nav li{
        background-color: rgb(229,87,58);
    }
    .navbar-default .navbar-nav > li > a,
    .navbar-default .navbar-nav > .active > a,
    .navbar-default .navbar-nav > li > a:hover,
    .navbar-default .navbar-nav > .active > a:hover,
    .navbar-default .navbar-nav > .open > a:focus,
    .navbar-default .navbar-nav > .open > a:active,
    .navbar-default .navbar-nav > .open > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > li > a,
    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover{
        color: #FFF;
    }
    .navbar-default .navbar-nav > li:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > li:hover{
        background-color: rgb(145,35,12);
    }
    .navbar-nav {
        margin: 0 -15px 0 -15px;
     }
    .navbar-default .navbar-toggle .icon-bar{
         background-color: rgb(26,150,130);
     }
     .nav-icon{
        width: 40px;
     }
     .navbar-default .navbar-nav > .dropdown > a .caret,
     .navbar-default .navbar-nav > .dropdown > a:hover .caret,
     .navbar-default .navbar-nav > .dropdown > a:focus .caret{
        border-top-color: #FFF;
        border-bottom-color: #FFF;
        float: right;
        border-top: 10px solid #FFF;
        border-bottom: 10px solid rgba(0, 0, 0, 0);
        border-right: 0 dotted;
        border-left: 10px solid rgba(0, 0, 0, 0);
        margin-right: 20px;
        margin-top: 4px;
        transform: rotate(45deg);
        -webkit-transform: rotate(45deg);
     }
}
@media (min-width: 768px) {
    .main .container {
        max-width: 650px;
    }
}
@media (min-width: 992px) {
    .main .container {
        max-width: 800px;
    }
}
@media (min-width: 1200px) {
    .main .container {
        max-width: 900px;
    }
}
@media (min-width: 1400px) {
    .main .container {
        max-width: 1000px;
    }
}
@media (min-width: 992px) {
  .container {
    max-width: 970px;
  }
}
.navbar-default .navbar-nav > li > a {
    font-size: 20px;
    color: rgb(119,120,120);
}
@media (max-width: 768px) {
    .navbar-default .navbar-nav > li > a {
        color: #B4B4B4;
    }
}
.navbar-default .navbar-toggle:focus{
    outline: none;
}
.dropdown-menu > li > a {
    padding: 6px 20px;
    font-size: 16px;
}

.jumbotron {
    font-size: 17px;
    background-color: transparent;
    color: #FFF;
    text-shadow: 1px 1px 1px rgba(157,108,78,0.9);
}
/* ... */

